--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
   "name": "missing-persons-system",
   "version": "1.0.0",
-  "main": "backend/server.js",
+  "description": "",
+  "author": "",
   "scripts": {
-    "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/faithkoech202/missing-persons-system.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/faithkoech202/missing-persons-system/issues"
-  },
-  "homepage": "https://github.com/faithkoech202/missing-persons-system#readme",
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
+  "main": "backend/server.js",
   "dependencies": {
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.1"
+    "multer": "^2.0.1",
+    "mysql2": "^3.14.1",
+    "register-service-worker": "^1.7.2",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-pwa": "~5.0.0",
+    "nodemon": "^3.1.10"
+  },
+  "bugs": {
+    "url": "https://github.com/faithkoech202/missing-persons-system/issues"
+  },
+  "homepage": "https://github.com/faithkoech202/missing-persons-system#readme",
+  "keywords": [],
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/faithkoech202/missing-persons-system.git"
   }
 }
