--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon backend/server.js",
     "start": "node backend/server.js",
+     "build": "cd tracelink-frontend && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "backend/server.js",
